--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -16,6 +16,7 @@
     <div class="main-content"> 
         {{>header}}
 
+         <p>This site was created by Anton SH. It uses data from weatherstack.com and positionstack.com!</p>
 
          <img class="portrait" src="/img/robott.png">
    </div>
